welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:3: error: type mismatch;
 found   : Unit
 required: Boolean
		return
                ^parotTrouble:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if (hour <= 7 || hour >=20) {
        ^